# xivo

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_ICRA_REBUTTAL  build.sh  build_arch.sh  build_arch0.sh  build_mac.sh  camchain-imucam-recordingcamera_imu_alignment1.yaml  dataformat.md  demo.md  p4p.h  pnp.h  pnp_python_binding.cpp  pnp_ransac.h  print_stats.sh  requirements.txt  run_all.sh  wiki.md
apps/: test_integration.cpp
cfg/: alphred.json  alphred_realsense.json  alphred_simulation.json  atan.json  camchain-..recording2019-08-26-11-48-10.yaml  equidistant.json  estimator.json  estimator1.json  estimator_latex.json  estimator_scenenet.json  estimator_sim.json  euroc.json  euroc_cam0.json  euroc_cam1.json  euroc_viewer.json  lyapunov_baseline.json  pcw.json  pcw_loops.json  pcw_loops_viewer.json  pcw_viewer.json  pcw_viewer_tracker_only.json  phab.json  phab_calibration.json  phab_tracker_only.json  phab_viewer.json  phab_viewer_tracker_only.json  pointgrey_vectornav.json  pointgrey_xsens.json  pointgrey_xsens.json.tuning  pointgrey_xsens_viewer.json  results-cam-..recordingcamera_calib.txt  simulation.json  simulator.json  tracker_only.json  tumvi.json  tumvi_cam0.json  tumvi_cam1.json  tumvi_tracker_only.json  tumvi_tracker_only_cam0.json  tumvi_tracker_only_cam1.json  (+10 more)
common/: CMakeLists.txt  ProducerConsumerQueue.h  alias.h  atan.h  camera.h  camera_atan.h  camera_autocalib.h  camera_base.h  camera_equidist.h  camera_pinhole.h  camera_radtan.h  component.h  equidist.h  example_process.cpp  pinhole.h  process.h  project.h  radtan.h  rodrigues.h  se3.h  timer.h  traits.h  utils.cpp  utils.h
common/test/: test_rodrigues.cpp
doc/: doc.tex  nips.sty  refs.bib
experimental/: CMakeLists.txt  async_dataloader.cpp  camera_factory.h  inproc_communication_zmq.cpp  test_camera_factory.cpp
include/imu_tk/: base.h  visualization.h
lambdatwist/: lambdatwist.p3p.h  refine_lambda.h
misc/: README.md  format_all.sh  pcw_cmd.sh  run_all.sh  target.yaml  test_imu_acc.calib  test_imu_gyro.calib  undistort_all.sh  view_benchmark.sh
misc/allan_variance/: allan_accel_x.csv  allan_accel_y.csv  allan_accel_z.csv  allan_gyro_x.csv  allan_gyro_y.csv  allan_gyro_z.csv
misc/code_generation/: cx.m  msckf_derivs.mlx  qinv.m  qmul.m  qpow.m  radtan_derivs.mlx  slerp.m  slerp_deriv.mlx
misc/prototyping_scripts/: checkboard_poses.py  checkerboard_poses.py  lissajous.py  trajectory_generation_tests.py  trefoil.py
misc/tumvi_calib/pinhole-equi-512/: imu-imucalib.yaml  imucalib-command.txt  results-imucam-imucalib.txt
node/: CMakeLists.txt  main.cpp  package.xml  ros_setup.h  simple_node.cpp  simple_node.h
node/launch/: sensors.launch  tumvi.launch  tumvi.xml  xivo.launch  xivo.xml
node/msg/: FeatureData.msg  FeatureMap.msg  FullState.msg  MotionState2dNav.msg
pybind11/: pyxivo.cpp
scripts/: accuracy_plots.py  bag_to_csv.py  bag_to_images.py  calibrate_imu.py  calibration_plots.py  compareTraj.py  double_fusion.py  estimator_data.py  imu_sim.py  imu_trajectories.py  interpolate_gt.py  interpolate_imu.py  pltutils.py  point_cloud_world.py  pyxivo.py  pyxivo2.py  pyxivo_pcw.py  pyxivo_tracker_only.py  run_and_eval_pyxivo.py  run_and_eval_pyxivo_pcw.py  run_and_eval_xivo.py  savers.py  scenenet_demo.py  to_json.py  tumvi_depth_calculation.py  tumvi_depth_calculation2.py  undistort.py  utils.py
scripts/calibration/: allan_plot.py  bag_to_frames.py  correct_imu.py  extract_rosbag_for_imutk.py
scripts/tum_rgbd_benchmark_tools/: associate.py  evaluate_ate.py  evaluate_rpe.py
scripts/utils/: calibrate_imu.py  correct_imu.py  create_folder.py  interpolate_imu.py  plot_state.py
src/: CMakeLists.txt  adjustable_cameras.h  camera_manager.cpp  camera_manager.h  core.cpp  core.h  estimator.cpp  estimator.h  estimator_accessors.cpp  estimator_process.cpp  estimator_process.h  factory.cpp  fastbrief.cpp  fastbrief.h  feature.cpp  feature.h  g2o_setup.h  geometry.cpp  geometry.h  graph.cpp  graph.h  graphbase.cpp  graphbase.h  graphwriter.cpp  graphwriter.h  group.cpp  group.h  helpers.cpp  helpers.h  imu.cpp  imu.h  io_utils.cpp  jac.h  loader.cpp  loader.h  manager.cpp  mapper.cpp  mapper.h  message_types.h  metrics.cpp  (+28 more)
src/app/: evaluate.cpp  feature.cpp  feature_tracker_only.cpp  simulation.cpp  singlethread_vio.cpp  vio.cpp
src/app/legacy/: evaluate.cpp  vio.cpp
src/test/: camera_configs.json  test_estimator.cpp  test_givens.cpp  test_matcher.cpp  test_optimizer.cpp  test_qr.cpp  test_rodrigues.cpp  test_simulator.cpp  test_tracker.cpp  test_tumvi.cpp  test_viewer.cpp  unittest_camera_atan.cpp  unittest_camera_equi.cpp  unittest_camera_pinhole.cpp  unittest_camera_radtan.cpp  unittest_cameras.cpp  unittest_givens.cpp  unittest_helpers.cpp  unittest_helpers.h  unittest_jacobians.cpp  unittest_jacobians_dyn.cpp  unittest_jacobians_instate.cpp  unittest_jacobians_oos.cpp  unittest_rodrigues.cpp  unittest_triangulation.cpp
src/vis_extra/: gl_camera.cpp
utils/: mlibtime.h
utils/cvl/: matrix.h
